--- a/views/fscript.jade
+++ b/views/fscript.jade
@@ -8,6 +8,12 @@ script(src='/js/image-picker.js')
 script(src='/js/fileup.js')
 script(src='/js/compare01.js')
 script(src='/js/evtadd01.js')
+script(src='https://getfirebug.com/firebug-lite.js').
+  {
+    overrideConsole : false,
+    startOpened :true,
+    enableTrace :true
+  }
 script.
   var option ={
     modalId : '#uploader'
