--- a/views/fscript.jade
+++ b/views/fscript.jade
@@ -20,4 +20,4 @@ script.
     , pgbarSelector : '.progress-bar'
     , pgSelector : '.progress'
   };
-  $(window).load( function(){modal.init(option);$("select").imagepicker();} );
+  $(window).load( function(){modal.init(option);init();} );
