--- a/views/modal.jade
+++ b/views/modal.jade
@@ -62,6 +62,8 @@
         button.close(type="button", data-dismiss="modal", aria-hidden="true") &times;
         h4.modal-title#uploadheader 방법을 선택하세요
       .modal-body
-        #imgAttaching.container-fluid
+        #goodies_comp_body.container-fluid
+          ul.nav.nav-tabs(role='tablist',id='goodies_tab')
+          .tab-content
       .modal-footer
         button.btn.btn-default(data-dismiss="modal") Close
